--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "firebase": "^11.0.2",
     "job-portal-client": "file:",
     "localforage": "^1.10.0",
